Made Kinesis VCR use RxJava internally